; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_backing-dev.c_bdi_flush_io.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_backing-dev.c_bdi_flush_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.backing_dev_info = type { i32 }
%struct.writeback_control = type { i32, i32, i32*, i32 }

@WB_SYNC_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.backing_dev_info*)* @bdi_flush_io to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bdi_flush_io(%struct.backing_dev_info* %0) #0 {
  %2 = alloca %struct.backing_dev_info*, align 8
  %3 = alloca %struct.writeback_control, align 8
  store %struct.backing_dev_info* %0, %struct.backing_dev_info** %2, align 8
  %4 = getelementptr inbounds %struct.writeback_control, %struct.writeback_control* %3, i32 0, i32 0
  store i32 1, i32* %4, align 8
  %5 = getelementptr inbounds %struct.writeback_control, %struct.writeback_control* %3, i32 0, i32 1
  store i32 1024, i32* %5, align 4
  %6 = getelementptr inbounds %struct.writeback_control, %struct.writeback_control* %3, i32 0, i32 2
  store i32* null, i32** %6, align 8
  %7 = getelementptr inbounds %struct.writeback_control, %struct.writeback_control* %3, i32 0, i32 3
  %8 = load i32, i32* @WB_SYNC_NONE, align 4
  store i32 %8, i32* %7, align 8
  %9 = load %struct.backing_dev_info*, %struct.backing_dev_info** %2, align 8
  %10 = getelementptr inbounds %struct.backing_dev_info, %struct.backing_dev_info* %9, i32 0, i32 0
  %11 = call i32 @writeback_inodes_wb(i32* %10, %struct.writeback_control* %3)
  ret void
}

declare dso_local i32 @writeback_inodes_wb(i32*, %struct.writeback_control*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
